tests/NormalTests/paczka2/big_fuzzy/14482339.err
Error in line 3: hBRT5NhsM S936 82,4
Error in line 8: UJutlCk3Km S829 7,3
Error in line 14: jowf1 A329 -5,7
Error in line 18: 3lMm A329 89,5
Error in line 20: SgJu A329 57,8
Error in line 13: jowf1 A329 86,6
Error in line 30: hBRT5NhsM S277 75,6
Error in line 35: hBRT5NhsM A329 136,8
Error in line 36: hBRT5NhsM S277 48,9
Error in line 38: hBRT5NhsM S936 -12,6
Error in line 37: hBRT5NhsM S936 19,6
Error in line 44: 5Djv9JzrHDb S277 2,5
Error in line 47: A329 S277 61,9
Error in line 71: hBRT5NhsM S936 15,4
Error in line 79: 3lMm A329 56,5
Error in line 72: 5Djv9JzrHDb A329 72,0
Error in line 87: jowf1 A329 32,3
Error in line 94: SgJu A329 15,6
Error in line 90: jowf1 S936 74,6
Error in line 107: SgJu S936 295,4
Error in line 120: UJutlCk3Km S936 65,8
Error in line 123: A329 S936 0,8
Error in line 129: SgJu S277 66,45
Error in line 126: jowf1 S936 50,4
Error in line 131: A329 S829 185,8
Error in line 132: A329 S277 72,8
Error in line 155: hBRT5NhsM S829 20,3
Error in line 133: SgJu S277 239,4
Error in line 164: SgJu A329 63,7
Error in line 166: UJutlCk3Km A329 40,71
Error in line 182: A329 A329 79,1
Error in line 180: 5Djv9JzrHDb S829 29,4
Error in line 184: A329 S829 16,5
Error in line 187: 5Djv9JzrHDb A329 17,9
Error in line 186: 3lMm A329 32,5
Error in line 192: 5Djv9JzrHDb S936 30,4
Error in line 203: 5Djv9JzrHDb S829 2,6
Error in line 216: A329 S829 278,9
Error in line 224: 3lMm S936 43,9
Error in line 226: A329 A329 85,3
Error in line 222: jowf1 A329 74,1
Error in line 228: A329 S936 89,9
Error in line 233: jowf1 S829 93,2
Error in line 236: A329 S277 66,2
Error in line 225: 3lMm S829 71,9
Error in line 247: 5Djv9JzrHDb A329 0,2
